erichaagdev/erichaag.dev/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: erichaag-dev
  labels:
    erichaag.dev/install-certificate: ''
