erichaagdev/erichaag.dev/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: erichaag-dev
  labels:
    app: erichaag-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: erichaag-dev
  template:
    metadata:
      labels:
        app: erichaag-dev
    spec:
      containers:
      - name: erichaag-dev
        image: ghcr.io/erichaagdev/erichaag.dev:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
